# mocc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Doxyfile  Doxyfile.common  README.md  SConstruct  mocc.cpp  mocc.sublime-project  pin.cpp
src/: .input_proc.cpp.swp  .moc_sweeper.cpp.swp  .moc_sweeper.hpp.swp  CMakeLists.txt  Makefile  SConscript  angle.cpp  angle.hpp  angular_quadrature.cpp  angular_quadrature.hpp  arrays.hpp  assembly.cpp  assembly.hpp  constants.hpp  core.cpp  core.hpp  core_mesh.cpp  core_mesh.hpp  coremesh.cpp  driver.cpp  driver.hpp  eigen_interface.hpp  eigen_solver.cpp  eigen_solver.hpp  error.hpp  file_scrubber.cpp  file_scrubber.hpp  files.cpp  files.hpp  filescrubber.cpp  filescrubber.hpp  fixed_source_solver.cpp  fixed_source_solver.hpp  fixedsrc_solver.cpp  fp_utils.hpp  geom.hpp  git_SHA1.cpp.in  git_SHA1.hpp  global_config.hpp  globalconfig.hpp  (+48 more)
src/aux/: CMakeLists.txt  geometry_output.cpp  geometry_output.hpp
src/auxiliary/: CMakeLists.txt  geometry_output.cpp  geometry_output.hpp
src/cmdo/: CMakeLists.txt  correction_data.hpp  correction_worker.cpp  correction_worker.hpp  moc_sweeper_2d3d.cpp  moc_sweeper_2d3d.hpp  plane_sweeper_2d3d.cpp  plane_sweeper_2d3d.hpp  sn_sweeper_cdd.cpp  sn_sweeper_cdd.hpp  source_2d3d.hpp
src/core/: CMakeLists.txt  angle.cpp  angle.hpp  angular_quadrature.cpp  angular_quadrature.hpp  angular_quadrature_user.cpp  angular_quadrature_user.hpp  assembly.cpp  assembly.hpp  blitz_typedefs.hpp  boundary_condition.cpp  boundary_condition.hpp  cmfd.cpp  cmfd.hpp  coarse_data.cpp  coarse_data.hpp  constants.cpp  constants.hpp  core.cpp  core.hpp  core_mesh.cpp  core_mesh.hpp  direction.hpp  eigen_interface.hpp  error.cpp  error.hpp  exponential.hpp  file_scrubber.cpp  file_scrubber.hpp  files.cpp  files.hpp  fission_source.hpp  fp_utils.hpp  geom.cpp  geom.hpp  global_config.hpp  globals.cpp  globals.hpp  h5file.cpp  h5file.hpp  (+52 more)
src/core/geometry/: CMakeLists.txt  angle.cpp  angle.hpp  box.cpp  box.hpp  circle.cpp  circle.hpp  direction.cpp  direction.hpp  geom.cpp  geom.hpp  geom_surface.cpp  geom_surface.hpp  line.cpp  line.hpp  points.hpp
src/core/tests/: 2x3_1.xml  2x3_2.xml  2x3_stack.xml  3x5.xml  CMakeLists.txt  inputs.hpp  pugi_utils.hpp  square.xml  square_2.xml  stack.xml  test_Angle.cpp  test_AngularQuadrature.cpp  test_Assembly.cpp  test_BoundaryCondition.cpp  test_CMFD.cpp  test_CoreMesh.cpp  test_Exponential.cpp  test_Material.cpp  test_Mesh.cpp  test_PinMesh_Cyl.cpp  test_PinMesh_Rect.cpp  test_ScatteringMatrix.cpp  test_XSMesh.cpp  test_XSMeshHomogenized.cpp  test_angular_quadrature.cpp  test_assembly.cpp  test_boundary_condition.cpp  test_exponential.cpp  test_h5file.cpp  test_material.cpp  test_mesh.cpp  test_xsmeshhomogenized.cpp
src/moc/: CMakeLists.txt  moc_sweeper.cpp  moc_sweeper.hpp  ray.cpp  ray.hpp  ray_data.cpp  ray_data.hpp
src/moc/tests/: 6x5.xml  CMakeLists.txt  test_ray.cpp  test_ray_data.cpp
src/mocc-core/: CMakeLists.txt  Makefile  angle.cpp  angle.hpp  angular_quadrature.cpp  angular_quadrature.hpp  array_1d.hpp  array_2d.hpp  arrays.hpp  assembly.cpp  assembly.hpp  blitz_typedefs.hpp  cmfd.cpp  cmfd.hpp  coarse_data.hpp  coarse_mesh.hpp  constants.cpp  constants.hpp  core.cpp  core.hpp  core_mesh.cpp  core_mesh.hpp  correction_data.hpp  eigen_interface.hpp  eigen_solver.cpp  eigen_solver.hpp  error.cpp  error.hpp  exponential.hpp  file_scrubber.cpp  file_scrubber.hpp  files.cpp  files.hpp  fixed_source_solver.cpp  fixed_source_solver.hpp  fp_utils.hpp  geom.hpp  global_config.hpp  h5file.cpp  h5file.hpp  (+61 more)
src/mocc-core/tests/: 6x5.xml  CMakeLists.txt  pugi_utils.hpp  square.xml  testAssembly.cpp  test_angular_quadrature.cpp  test_exponential.cpp  test_material.cpp  test_mesh.cpp  test_ray.cpp  test_ray_data.cpp
src/sn/: CMakeLists.txt  cell_worker.hpp  correction_data.hpp  sn_boundary.cpp  sn_boundary.hpp  sn_current_worker.hpp  sn_source.hpp  sn_sweeper.cpp  sn_sweeper.hpp  sn_sweeper_cdd.cpp  sn_sweeper_cdd.hpp  sn_sweeper_dd.cpp  sn_sweeper_dd.hpp  sn_sweeper_factory.cpp  sn_sweeper_factory.hpp  sn_sweeper_variant.hpp  source_sn.hpp
src/sn/tests/: CMakeLists.txt  test_sn_boundary.cpp
src/solvers/: CMakeLists.txt  eigen_solver.cpp  eigen_solver.hpp  fission_source.hpp  fixed_source_solver.cpp  fixed_source_solver.hpp  monte_carlo_eigenvalue_solver.cpp  monte_carlo_eigenvalue_solver.hpp  solver.hpp  solver_factory.cpp  solver_factory.hpp
src/solvers/tests/: CMakeLists.txt
src/sweepers/: CMakeLists.txt  sn_sweeper_factory.cpp  sn_sweeper_factory.hpp  transport_sweeper.cpp  transport_sweeper.hpp  transport_sweeper_factory.cpp  transport_sweeper_factory.hpp
src/sweepers/cmdo/: CMakeLists.txt  correction_data.cpp  correction_data.hpp  correction_worker.cpp  correction_worker.hpp  moc_sweeper_2d3d.cpp  moc_sweeper_2d3d.hpp  plane_sweeper_2d3d.cpp  plane_sweeper_2d3d.hpp  sn_sweeper_cdd.hpp  sn_sweeper_cdd_mb.hpp  sn_sweeper_factory_cdd.cpp  sn_sweeper_factory_cdd.hpp  source_2d3d.hpp
src/sweepers/mc/: CMakeLists.txt  fission_bank.cpp  fission_bank.hpp  particle.cpp  particle.hpp  particle_pusher.cpp  particle_pusher.hpp  rng.cpp  rng.hpp  tally_scalar.hpp  tally_spatial.hpp
src/sweepers/moc/: CMakeLists.txt  moc_current_worker.hpp  moc_sweeper.cpp  moc_sweeper.hpp  moc_sweeper_kernel.inc.hpp  ray.cpp  ray.hpp  ray_data.cpp  ray_data.hpp
src/sweepers/sn/: CMakeLists.txt  cell_worker.hpp  correction_data.cpp  correction_data.hpp  sn_boundary.cpp  sn_boundary.hpp  sn_current_worker.hpp  sn_sweeper.cpp  sn_sweeper.hpp  (+6 more)
src/tests/: CMakeLists.txt  test_3x3.cpp
src/util/: CMakeLists.txt  blitz_typedefs.hpp  error.cpp  error.hpp  file_scrubber.cpp  file_scrubber.hpp  files.cpp  files.hpp  force_inline.hpp.in  fp_utils.hpp  global_config.hpp  h5file.cpp  h5file.hpp  omp_guard.h  omp_stubs.h  parallel_environment.hpp  pugifwd.hpp  range.hpp  rational_approximation.hpp  rng_lcg.cpp  rng_lcg.hpp  sign.hpp  stacktrace.hpp  string_utils.cpp  string_utils.hpp  tee_stream.hpp  timers.cpp  utils.hpp  validate_input.cpp  validate_input.hpp
(+60 files in other folders)
